--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,5 +11,10 @@
   </head>
   <body>
     <h1>This is my Blog</h1>
+    <ul>
+      <li><a href="/posts/post1/">Post 1</a></li>
+	  <li><a href="/posts/post2/">Post 2</a></li>
+	  <li><a href="/posts/post3/">Post 3</a></li>
+    </ul>
   </body>
 </html>
