--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,16 @@
 ---
+const pageTitle = "About Me";
+
+const identity = {
+  firstName: "Satyam",
+  lastName: "Bansal",
+  country: "India",
+  occupation: "Student",
+  college: "NITK Surathkal",
+  hobbies: ["watching Cricket", "CSGO"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 ---
 
 <html lang="en">
@@ -7,14 +19,35 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
+    <p>Here are a few facts about me:</p>
+    <ul>
+      <li>My name is {identity.firstName} {identity.lastName}.</li>
+      <li>
+        I live in {identity.country} and I am a {identity.occupation} at {
+          identity.college
+        }.
+      </li>
+      {
+        identity.hobbies.length >= 2 && (
+          <li>
+            Two of my hobbies are: {identity.hobbies[0]} and{" "}
+            {identity.hobbies[1]}
+          </li>
+        )
+      }
+    </ul>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map((skill) => <li>{skill}</li>)}
+    </ul>
     <h1>This is my Blog</h1>
     <ul>
-      <li><a href="/posts/post1/">Post 1</a></li>
-	  <li><a href="/posts/post2/">Post 2</a></li>
-	  <li><a href="/posts/post3/">Post 3</a></li>
+      <li><a href="posts/post1/">Post 1</a></li>
+      <li><a href="posts/post2/">Post 2</a></li>
+      <li><a href="posts/post3/">Post 3</a></li>
     </ul>
   </body>
 </html>
