--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,33 +21,37 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body>
-    <p>Here are a few facts about me:</p>
-    <ul>
-      <li>My name is {identity.firstName} {identity.lastName}.</li>
-      <li>
-        I live in {identity.country} and I am a {identity.occupation} at {
-          identity.college
-        }.
-      </li>
-      {
-        identity.hobbies.length >= 2 && (
+  <body class="prose lg:prose-xl">
+    <div class="w-[100vw] flex justify-center">
+      <div>
+        <p>Here are a few facts about me:</p>
+        <ul>
+          <li>My name is {identity.firstName} {identity.lastName}.</li>
           <li>
-            Two of my hobbies are: {identity.hobbies[0]} and{" "}
-            {identity.hobbies[1]}
+            I live in {identity.country} and I am a {identity.occupation} at {
+              identity.college
+            }.
           </li>
-        )
-      }
-    </ul>
-    <p>My skills are:</p>
-    <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
-    </ul>
-    <h1>This is my Blog</h1>
-    <ul>
-      <li><a href="posts/post1/">Post 1</a></li>
-      <li><a href="posts/post2/">Post 2</a></li>
-      <li><a href="posts/post3/">Post 3</a></li>
-    </ul>
+          {
+            identity.hobbies.length >= 2 && (
+              <li>
+                Two of my hobbies are: {identity.hobbies[0]} and{" "}
+                {identity.hobbies[1]}
+              </li>
+            )
+          }
+        </ul>
+        <p>My skills are:</p>
+        <ul>
+          {skills.map((skill) => <li>{skill}</li>)}
+        </ul>
+        <h1>This is my Blog</h1>
+        <ul>
+          <li><a href="posts/post1/">Post 1</a></li>
+          <li><a href="posts/post2/">Post 2</a></li>
+          <li><a href="posts/post3/">Post 3</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
