--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Navigation from "./Navigation.astro";
+import Footer from "./Footer.astro";
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -7,7 +10,7 @@ const identity = {
   country: "India",
   occupation: "Student",
   college: "NITK Surathkal",
-  hobbies: ["watching Cricket", "CSGO"],
+  hobbies: ["Watching Cricket", "CSGO"],
 };
 
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
@@ -21,9 +24,10 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body class="prose lg:prose-xl">
-    <div class="w-[100vw] flex justify-center">
-      <div>
+  <body>
+    <div class="w-[100vw] flex flex-col justify-center items-center">
+      <Navigation />
+      <div class="prose lg:prose-xl">
         <p>Here are a few facts about me:</p>
         <ul>
           <li>My name is {identity.firstName} {identity.lastName}.</li>
@@ -53,5 +57,6 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
         </ul>
       </div>
     </div>
+    <Footer />
   </body>
 </html>
