--- a/src/pages/Navigation.astro
+++ b/src/pages/Navigation.astro
@@ -1,5 +1,5 @@
-<nav class="bg-blue-500 py-4 w-[100vw]">
-  <div class="px-4">
+<nav class="bg-blue-500 py-4">
+  <div>
     <div class="max-w-screen-xl mx-auto flex justify-between items-center">
       <h1 class="text-white text-2xl font-bold">My Blog</h1>
       <ul class="flex space-x-4">
