--- a/src/pages/Footer.astro
+++ b/src/pages/Footer.astro
@@ -8,15 +8,15 @@ const username = "sbansal1999";
   class="bg-gray-200 py-4 text-xl bg-gradient-to-r from-blue-500 to-purple-500"
 >
   <div
-    class="container mx-auto px-4 bg-gradient-to-r from-blue-500 to-purple-500"
+    class="max-w-screen-xl mx-auto flex justify-between items-center container px-4 bg-gradient-to-r from-blue-500 to-purple-500"
   >
     <p class="text-center text-gray-600">
       Learn more about my projects on <a
-        class="hover:text-blue-600"
+        class="hover:text-blue-600 underline"
         href={`https://www.${platform}.com/${username}`}>{platform}</a
       >!
     </p>
-    <div class="text-center my-2">
+    <div class="text-center my-2 flex">
       <Social platform="Twitter" username="sbansal1999" />
       <Social platform="GitHub" username="sbansal1999" />
     </div>
