--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,10 +23,15 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <script
+      src="https://kit.fontawesome.com/5edcd58a42.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="w-[100vw] flex flex-col justify-center items-center">
-      <Navigation />
+    <Navigation />
+
+    <div class="flex flex-col justify-center items-center">
       <div class="prose lg:prose-xl">
         <p>Here are a few facts about me:</p>
         <ul>
@@ -51,9 +56,9 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
         </ul>
         <h1>This is my Blog</h1>
         <ul>
-          <li><a href="posts/post1/">Post 1</a></li>
-          <li><a href="posts/post2/">Post 2</a></li>
-          <li><a href="posts/post3/">Post 3</a></li>
+          <li><a href="/posts/post1/">Post 1</a></li>
+          <li><a href="/posts/post2/">Post 2</a></li>
+          <li><a href="/posts/post3/">Post 3</a></li>
         </ul>
       </div>
     </div>
