--- a/src/pages/Social.astro
+++ b/src/pages/Social.astro
@@ -4,7 +4,7 @@ const { platform, username } = Astro.props;
 
 <div class="mr-5">
   <a href={`https://www.${platform}.com/${username}`}>
-    <i class={`fa-brands fa-${platform.toLowerCase()}`}></i>
+    <i class={`fa-brands fa-${platform?.toLowerCase()}`}></i>
     {platform}</a
   >
 </div>
